# slambook2

./: .gitignore  README.md
ch11/: feature_training.cpp  loop_closure.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: run_kitti_stereo.cpp
ch13/config/: default.yaml
ch13/include/myslam/: feature.h  frame.h  frontend.h  map.h  mappoint.h
ch13/src/: frame.cpp  frontend.cpp  mappoint.cpp
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt  pose_estimation_3d2d.cpp
